--- a/index.html
+++ b/index.html
@@ -248,8 +248,10 @@
 
     <footer class="footer">
         <p>&copy; 2025 Wahyu Ardinata Depari. All rights reserved.</p>
-        <a href="#home" class="icon"><i class="fa-solid fa-arrow-up"></i></a>
+        <!-- <a href="#home" class="icon"><i class="fa-solid fa-arrow-up"></i></a> -->
     </footer>
+
+    <button id="scrollUp"><i class="fa-solid fa-arrow-up"></i></button>
 
     
     <script src="asset/script.js"></script>
